fix(css): Change overflow text

--- a/escape/index.css
+++ b/escape/index.css
@@ -31,6 +31,7 @@ h2, p {
 
 #inspect {
   flex: 1;
+  overflow: scroll;
 }
 
 .inspection {
